<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/black">

    <TextView
        style="@style/Text"
        android:text="@string/title"
        android:textSize="25dp"
        android:textColor="@color/darkcyan"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <EditText
            style="@style/Text.EditText"
            android:hint="@string/op1"
            android:id="@+id/eOp1"/>

        <EditText
            style="@style/Text.EditText"
            android:hint="@string/op2"
            android:id="@+id/eOp2"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp">

        <CheckBox
            style="@style/Text.CheckBox"
            android:text="@string/add"
            android:checked="true"
            android:id="@+id/eAdd"/>

        <CheckBox
            style="@style/Text.CheckBox"
            android:text="@string/sub"
            android:checked="false"
            android:id="@+id/eSub"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp">

        <CheckBox
            style="@style/Text.CheckBox"
            android:text="@string/mult"
            android:checked="false"
            android:id="@+id/eMult"/>

        <CheckBox
            style="@style/Text.CheckBox"
            android:text="@string/div"
            android:checked="false"
            android:id="@+id/eDiv"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:gravity="center"
        android:text="@string/calc"
        android:background="@color/darkcyan"
        android:id="@+id/eButton"/>

    <TextView
        style="@style/Text"
        android:text="..."
        android:textColor="@color/whitesmoke"
        android:textSize="20dp"
        android:id="@+id/eResult"/>

</LinearLayout>